# deepLearningfromScratch

./: .gitignore  README.md  pyproject.toml
ch04/: train_neuralnet.py
